[package]
name = "linkstash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.8", features = ["derive"] }
serde_json = "1.0.99"
serde = {version = "1.0.164", features = ["derive"]}
directories-next = "2.0.0"
opengraph = "0.2.4"
open = "5.0.0"
ansi_term = "0.12.1"
